# s4-wormhole-convergence-agent

./: ListNameplates.hs  LoggingWebSockets.hs  MagicWormholeClient.hs  MagicWormholeModel.hs  OpenMailbox.hs  README.md  Receive.hs  SPAKE2.hs  jsmain.hs  jsonmain.hs  jsontest.hs  mapfunctor.hs  package.yaml  s4-wormhole-convergence-agent.cabal  stack.yaml  wsmain.hs
s4wormhole_convergence/: Cargo.toml
s4wormhole_convergence/src/: main.rs
