[package]
name = "s4wormhole_convergence"
version = "0.1.0"
authors = ["Jean-Paul Calderone <exarkun@twistedmatrix.com>"]

[dependencies]
futures = "0.1.13"
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "master" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core", branch = "master" }
pretty_env_logger = "0.1.0"